# telegram-bot

./: .coveragerc  .dockerignore  .env.alerts.example  .env.amvera.example  .env.blackexclude  .env.example  .gitignore  .isort.cfg  .pre-commit-config.offline.yaml  .pre-commit-config.yaml  .ruffignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  DEBT_CHECKLIST.md  Dockerfile  Makefile  README  README.md  REPORT.md  amvera.yaml  amvera.yml  audit.md  config.py  constraints.txt  data_processor.py  docker-compose.yml  logger.py  main.py  mypy.ini  observability.py  pip.conf  pyproject.toml  pytest.ini  refactor_plan.md  requirements-qa-min.txt  requirements.txt  ruff.toml  sitecustomize.py
aiogram/: __init__.py
api/: __init__.py  health.py
app/: __init__.py  api.py  cli.py  config.py  data_source.py  db_maintenance.py  fastapi_compat.py  handlers.py  health.py  main.py  metrics.py  middlewares.py  observability.py  runtime_lock.py  runtime_state.py  smoke_warmup.py  value_alerts.py  value_clv.py  value_detector.py  value_service.py
core/: __init__.py
database/: __init__.py  cache.py  cache_postgres.py  db_logging.py  db_router.py  schema.sql
diagtools/: __init__.py  bench.py  clv_check.py  coverage_enforce.py  drift_ref_update.py  freshness.py  golden_regression.py  provider_quality.py  reports_html.py  run_diagnostics.py  scheduler.py  settlement_check.py  value_check.py
docs/: Diary.md  Project.md  changelog.md  deploy-amvera.md  dev_guide.md  diagnostics.md  qa.md  quality_gates.md  runbook.md  tasktracker.md  user_guide.md
httpx/: __init__.py
metrics/: __init__.py  metrics.py
ml/: base_poisson_glm.py  calibration.py  modifiers_model.py  montecarlo_simulator.py
monitoring/: alerts.yaml
patches/: 001-pydantic-v2.patch  002-precommit-ci.patch  003-ml-modules.patch  006-observability-smoke.patch  100-config-contract.patch  120-ml-skeletons.patch  130-tests-smoke.patch  140-ci-offline-tooling.patch  150-data-processor-split.patch
prometheus_client/: __init__.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
reports/: ACTION_PLAN.md  CONFORMANCE_MATRIX.md  DYNAMIC_CHECKS.md  FINAL_SUMMARY.md  FIX_PLAN.md  INVENTORY.md  ISSUES_REGISTER.md  PROJECT_AUDIT.md  RELEASE_NOTES_RC.md  RUN_SUMMARY.md  STATIC_AUDIT.md  bot_e2e_snapshot.py  coverage_gaps.md  patch_adaptation.md  rc_summary.py  state.json
rq/: __init__.py
scripts/: _optional.py  api_server.py  black_partition.py  cli.py  coverage_utils.py  deps_lock.py  enforce_coverage.py  entrypoint.sh  fix_headers.py  get_match_prediction.py  migrations.py  preflight.py  preflight_redis.py  preflight_sportmonks.py  preflight_worker.py  prepare_datasets.py  prestart.py  publish_rc_summary.py  role_dispatch.py  ruff_partition.py  run_precommit.py  run_simulation.py  run_start_check.sh  run_training_pipeline.py  sm_sync.py  syntax_partition.py  tg_bot.py  train_glm.py  train_model.py  train_modifiers.py  update_upcoming.py  validate_modifiers.py  verify.py  worker.py
services/: data_processor.py  feature_builder.py  prediction_modifier.py  prediction_pipeline.py  recommendation_engine.py  simulator.py  sportmonks_client.py
sportmonks/: __init__.py  cache.py  client.py  endpoints.py  repository.py  schemas.py
storage/: persistence.py
telegram/: __init__.py  bot.py  dependencies.py  middlewares.py  models.py  services.py  widgets.py
tests/: conftest.py  conftest_np_guard.py  test_data_paths.py  test_db_maintenance.py  test_db_url.py  test_env_contract.py  test_metrics.py  test_metrics_sentry.py  test_metrics_server.py  test_ml.py  test_pipeline_stub.py  test_prediction_pipeline_local_registry_e2e.py  test_preflight_smoke.py  test_readiness.py  test_registry_local.py  test_runtime_lock.py  test_runtime_lock_stale.py  test_services.py  test_services_workers_minimal.py  test_settings.py  test_sportmonks_stub.py  test_task_manager_cleanup.py  test_todo_barriers.py
tgbotapp/: __init__.py  bot.py  db_url.py  dependencies.py  middlewares.py  models.py  ratelimiter.py  sender.py  services.py  sportmonks_client.py  widgets.py
tickets/: ENV_SYNC.md  NEED_DOCS.md  NEXT_RC_CHECKLIST.md  SCHEDULER_CLEANUP.md  TODO.md
tools/: __init__.py  alerts_validate.py  api_selftest.py  bench.py  ci_assert_no_binaries.sh  coverage_enforce.py  coverage_gaps.py  drift_report.py  golden_regression.py  offline_safe_import.py  qa_deps_sync.py  qa_stub_injector.py  (+2 more)
(+279 files in other folders)
