[project]
name = "telegram-bot"
version = "0.1.0"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "prometheus-client>=0.20",
    "sentry-sdk>=2",
    "python-dotenv>=1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = """
(
  ^legacy/
  | ^app/data_processor/__init__[.]py$
  | ^app/data_processor/feature_engineering[.]py$
  | ^app/data_processor/io[.]py$
  | ^app/data_processor/transformers[.]py$
  | ^app/data_processor/validators[.]py$
  | ^experiments/
  | ^ml/base_poisson_glm[.]py$
  | ^ml/calibration[.]py$
  | ^ml/modifiers_model[.]py$
  | ^ml/montecarlo_simulator[.]py$
  | ^notebooks/
  | ^scripts/fix_headers[.]py$
  | ^scripts/migrations/
  | ^telegram/middlewares[.]py$
  | ^telegram/models[.]py$
)
"""
