[project]
name = "telegram-bot"
version = "0.1.0"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "prometheus-client>=0.20",
    "sentry-sdk>=2",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
]

[project.scripts]
diag-drift = "diagtools.drift:main"
diag-run = "diagtools.run_diagnostics:main"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\.pyi?$"
# Внимание: extend-exclude — это ОДНА regex-строка (без многострочного тела).
# Мы будем программно дописывать сюда пути через пайпы `|`.
extend-exclude = "(^app/config\\.py$|^app/data_processor/__init__\\.py$|^app/data_processor/feature_engineering\\.py$|^app/data_processor/io\\.py$|^app/data_processor/transformers\\.py$|^app/data_processor/validators\\.py$|^experiments/|^legacy/|^ml/base_poisson_glm\\.py$|^ml/calibration\\.py$|^ml/modifiers_model\\.py$|^ml/montecarlo_simulator\\.py$|^notebooks/|^scripts/fix_headers\\.py$|^scripts/migrations/|^telegram/middlewares\\.py$|^telegram/models\\.py$)"

[tool.ruff]
target-version = "py310"
line-length = 88
respect-gitignore = true
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "migrations",
    "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["E203", "W503"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.isort]
profile = "black"
py_version = 310
line_length = 88
skip = ["migrations", "alembic"]
